Added next/previous to posts, added images to users

--- a/views/user_list.ejs
+++ b/views/user_list.ejs
@@ -29,6 +29,9 @@
 <%if (previous) { %>
     <a href="<%= previous %>"> Previous </a>
 <% } %>
+<%if (next) { %>
+    <a href="<%= next %>">Next</a>
+<% } %>
 </body>
 <%- include('_footer') -%>
 </html>
