--- a/views/user_list.ejs
+++ b/views/user_list.ejs
@@ -1,5 +1,3 @@
-
-
 <html lang="en-gb">
 <%- include('_head') -%>
 <%- include('_header') -%>
@@ -7,7 +5,7 @@
 <head>
     <style>
         body {background-color: lightblue;}
-        h1 {color: navy; margin-left: 20px;}
+        h1 {color: rgb(29, 19, 162); margin-left: 20px;}
     </style>
 </head>
 
@@ -18,8 +16,8 @@
     <% results.forEach(function(user) {%>
         <li>
             <img src="<%=user.profileImageUrl%>" alt="user image" width=20 height=20/>
-            <%= user.name %>
-            <a href="users/<%=user.id %>" />
+            
+            <a href="users/<%=user.id %>"> <%= user.name %></a>
         </li>
     <% }); %>
 </ol>
