Added post page and links

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,5 +2,7 @@
     <nav>
         <a href="/posts">Posts</a>
         <a href="/users">Users</a>
+        <a href="/users/create">New user</a>
+        <a href="/posts/create">New post</a>
     </nav>
 </header>
