--- a/views/create_user.ejs
+++ b/views/create_user.ejs
@@ -2,7 +2,7 @@
 <%- include('_head') -%>
 <%- include('_header') -%>
 <body>
-<h1>Create User</h1>
+<h1>New User</h1>
 <form method="post" action="/users/create">
     <label>
         Name:
