Added delete functionality

--- a/views/post_detail.ejs
+++ b/views/post_detail.ejs
@@ -49,7 +49,7 @@
       <% }); %>
     </ul>
     <button type="submit">Edit</button>
-    <form action="/users/<%= postedBy.id %>">
+    <form method="POST" action="/posts/<%= id %>/delete/">
         <button type="submit">Delete</button>
     </form>
   </body>
