Added delete post method

--- a/views/post_detail.ejs
+++ b/views/post_detail.ejs
@@ -49,7 +49,7 @@
       <% }); %>
     </ul>
     <button type="submit">Edit</button>
-    <form method="POST" action="/posts/<%= id %>/delete/">
+    <form action="/posts/<%= id%>/delete/" method="POST">
         <button type="submit">Delete</button>
     </form>
   </body>
