Added styling on list of posts

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,6 +1,7 @@
 <header>
-    <nav>
-        <a href="/posts">Posts</a>
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <nav class="nav-text">
+        <a href="/posts" >Posts</a>
         <a href="/users">Users</a>
         <a href="/users/create">New user</a>
         <a href="/posts/create">New post</a>
