--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,23 +1,78 @@
-    .post_list_text {
-        text-align: center;
-        font-size: 20px;
-        display: block;
-        margin-top: 20px;
-        border: 3px ridge rgb(188, 188, 244);
-        background-color: rgb(205, 234, 244);
-        padding: 50px;
-        background-size: 150px;
+.post-list {
+  display: block; 
+  margin-bottom: 20px;
+  border: 3px ridge rgb(188, 188, 244);
+  background-color: rgb(229, 239, 244);
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-size: 20px;
+}
+.like {
+  padding-top: 10px;
+}
+ul {
+  padding-left: 0px;
+  list-style-type: none;
+  text-align: center;
 }
 
-.post_list_image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding : 10px;
+.nav-text {
+  font-size: 20px;
+}
+.post-list-image {
+  width:80vw;
+  height: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
+a:link {
+  color: #0000ff;
+  margin-right: 10px;
+}
+a:visited {
+  color: #0000ff;
+} /* visited link */
+a:hover {
+  color: #b4045f;
+} /* mouse over link */
+a:link {
+  text-decoration: none;
+}
 
-.padding {
-    width: 500px;
-    height: 200px;
+a.next 
+{
+  margin-left: 40%;
+  font-size: 20px;
+}
+
+a.previous {
+  margin-left: 10%;
+  font-size: 20px;
+}
+
+input[type="text"],
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  width: 200px;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
 }
