--- a/views/post_detail.ejs
+++ b/views/post_detail.ejs
@@ -1,37 +1,33 @@
 <html lang="en-gb">
-  <%- include('_head') -%> <%- include('_header') -%>
   <body>
     <div>
-      <img src="<%=imageUrl%>" alt="post image" width="200" height="auto" />
+      <img src="<%=imageUrl%>" alt="post image"/>
     </div>
     <div><%= message %></div>
     <div>
       Posted by
-      <a href="/users/<%= postedBy.id %>" style="text-decoration: none"
-        ><%= postedBy.name %></a
-      >
+      <a href="/users/<%= postedBy.id %>"
+        ><%= postedBy.name %></a>
     </div>
     <div>
       Created at <%= Intl.DateTimeFormat('en-GB', { year: 'numeric', month:
       'long', day: '2-digit'}).format(createdAt) %>
     </div>
-    <ul style="list-style-type: none">
+    <ul>
       Liked by <%= likedBy.length%> <% likedBy.forEach(function(user) {%>
       <li>
         <a href="/users/<%= user.id %>"
           ><img
             src="<%= user.coverImageUrl%>"
             alt="user image"
-            width="30"
-            height="30"
         /></a>
-        <a href="/users/<%= user.id %>" style="text-decoration: none"
+        <a href="/users/<%= user.id %>" 
           ><%= user.name %></a
         >
       </li>
       <% }); %>
     </ul>
-    <ul style="list-style-type: none">
+    <ul>
       Disiked by <%= dislikedBy.length%> <% dislikedBy.forEach(function(user)
       {%>
       <li>
@@ -39,10 +35,8 @@
           ><img
             src="<%= user.coverImageUrl%>"
             alt="user image"
-            width="30"
-            height="30"
         /></a>
-        <a href="/users/<%= user.id %>" style="text-decoration: none"
+        <a href="/users/<%= user.id %>" 
           ><%= user.name %></a
         >
       </li>
